@@ -1,6 +1,0 @@
-######################################################
-#	Tcl/Tk Project manager 2.0
-#	Distributed under GNU Public License
-# Author: Sergey Kalinin svk@nuk-svl.ru
-# Home page: https://nuk-svk.ru
-######################################################
