@@ -10,7 +10,7 @@ exec wish "$0" -- "$@"
 ######################################################
 # Version: 2.0.0
 # Release: alpha
-# Build: 12082022153746
+# Build: 15082022110520
 ######################################################
 
 # определим текущую версию, релиз и т.д.
